# projekt-gruppe-20-yadalufi

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  build.sh  contribution.md  file.c  file.h  readme.md
doxygen/html/: add__student_8h.html  add__student_8h_source.html  annotated.html  classes.html  contact__tracing_8h.html  contact__tracing_8h_source.html  create__plan_8h.html  create__plan_8h_source.html  csv_8h_source.html  csv__read_8h.html  csv__read_8h_source.html  csv__write_8h.html  csv__write_8h_source.html  dir_097f9cd1724f7204c0b11f995b3d66df.html  dir_1a56cc8cdc1689899910be5fa4716ee4.html  dir_2ca85aa3edcb5344e274ce267704e268.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_524400c5a26e63bcb0fb13d04bbb2228.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5c340568f50c435f5ad20df6b52069f2.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7124cf13e03d40eb4392f0a69c003ad7.html  dir_c04d3d0002693eb8e44c62a439a2f19a.html  dir_c6a27fea3b3b4a9686c0f69f80eb574c.html  dir_d31e27ee00e32bdab6366308a3ce68b6.html  dir_d50bb2f4ffe1206499052376964c4187.html  dir_e112a084a963aeac1b30d3075677f1ae.html  dir_eb3fdbf47573a454769e2b385590ace5.html  file_8h.html  file_8h_source.html  files.html  globals.html  globals_func.html  globals_type.html  load__csv_8h.html  load__csv_8h_source.html  md_contribution.html  md_items_2item-1.html  md_items_2item-2.html  (+25 more)
doxygen/latex/: add__student_8h.tex  add__student_8h_source.tex  (+39 more)
items/: item-1.md  item-2.md  item-3.md  item-4.md  item-5.md  item-6.md  item-7.md  item-8.md
src/: contact_tracing.cpp  contact_tracing.h  csv.h  csv_read.cpp  csv_read.h  csv_write.c  csv_write.cpp  csv_write.h  file.c  file.cpp  file.h  file.h.gch  main.c  main.cpp  matrix.cpp  matrix.h  menu.c  menu.cpp  menu.h  student.cpp  student.h
testcsvfiles/: history101.csv  kreko.csv  test1.csv  test1kopie.csv  test2.csv  test2kopie.csv  test3.csv
tests/: .gitignore  test.cpp  test_example.cpp
(+44 files in other folders)
